melhoria de mobile
precisa refinar, talvez seja gambiarra

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,11 @@ body{
     
     /*<!--background-repeat: no-repeat--> deu problema na versao mobile; */
     
+    /*soluçao temporaria pra mostrar no mobile, precisa de um fine tuning*/
+    width: fit-content;
+    height: fit-content;
+    <----------------->
+    
     font-family: 'Poiret One';
     font-size: 35px;
     color: rgb(0, 0, 0);
